--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Louise Salas</title>
-    <meta charset="UTF-8"> 
+  <title>Louise Salas</title>
+  <meta charset="UTF-8">
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    	
+
 </head>
+
 <body>
 
 
-	  <div class="terminal_window">
+  <div class="terminal_window">
     <header>
       <div class="red_btn button"></div>
       <div class="green_btn button"></div>
@@ -20,16 +22,13 @@
     <div class="terminal_window">
 
       <div id="typed-strings" class="terminal_text">
-      	<p>Commands are defined internally.  Type `help' to see the list.</p>
+        <p>Commands are defined internally. Type `help' to see the list.</p>
         <p> Louise's Profile $</p>
       </div>
-
-
-
-      <input type="text" id="scriptBox" name="" autofocus="" onkeypress="return runScript(event)" >
+      <input type="text" id="scriptBox" name="" autofocus="" onkeypress="return runScript(event)">
       <br>
-     
-      <div  id="cntnt"></div>
+
+      <div id="cntnt" style="word-break: break;margin:10px;"></div>
     </div>
 
   </div>
@@ -40,4 +39,5 @@
 
   <script type="text/javascript" src="script/script.js"></script>
 </body>
+
 </html>
